--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -260,11 +260,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === New `help_accessibility` option displays the keyboard shortcut to open the in-application help in the status bar
 // TINY-9379
 
-=== Added a new `InsertNewBlockBefore` and `InsertNewBlockAfter` command which inserts an empty block before and after the block containing the current selection
+=== Added new `InsertNewBlockBefore` and `InsertNewBlockAfter` commands which insert an empty block before or after the block containing the current selection
 // TINY-10022
-{productname} 6.7 introduced a new feature that adds two new commands.
+{productname} 6.7 includes two new commands: `InsertNewBlockBefore` and `InsertNewBlockAfter`.
 
-These commands were introduced to address scenarios when navigation encounters spatial constraints, but specifically when the constraint is at the {productname} document's edges. For example, if a user inserted a `<details>` element aka **accordion component** at the beginning of the {productname} document, there was no way for the user to move the cursor above or below this element. 
+These commands were introduced to address scenarios when navigation encounters spatial constraints, but specifically when the constraint is at the {productname} document’s edges.
+
+For example, if a user inserted a `<details>` element (as part of an **accordion component** at the beginning of the {productname} document, there was no way for the user to move the cursor above or below this element. 
 
 New command inserts are:
 
@@ -272,8 +274,9 @@ New command inserts are:
 . `InsertNewBlockAfter`: command inserts an empty block after the one containing the current selection.
 
 [IMPORTANT]
-It's important to note that the newly added empty block will be placed at the root level of the document, immediately `before` or `after` the top parent block encompassing the current selection. 
-
+====
+Blocks added by either command are placed at the root level of the {productname} document, immediately before or after the top parent block encompassing the current selection.
+====
 
 [[changes]]
 == Changes
