--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -264,14 +264,9 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 // TINY-10022
 {productname} 6.7 includes two new commands: `InsertNewBlockBefore` and `InsertNewBlockAfter`.
 
-These commands were introduced to address scenarios when navigation encounters spatial constraints, but specifically when the constraint is at the {productname} document’s edges.
+These commands address scenarios where navigation encounters spatial constraints; most specifically when the constraint is at a {productname} document’s edges.
 
-For example, if a user inserted a `<details>` element (as part of an **accordion component** at the beginning of the {productname} document, there was no way for the user to move the cursor above or below this element. 
-
-New command inserts are:
-
-. `InsertNewBlockBefore`: command inserts an empty block before the one containing the current selection.
-. `InsertNewBlockAfter`: command inserts an empty block after the one containing the current selection.
+For example, if a user inserts a `<details>` element (as part of an **Accordion component**) at the beginning of a {productname} document, the `InsertNewBlockBefore` command now provides a way to set the insertion point above this element. 
 
 [IMPORTANT]
 ====
