--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -251,15 +251,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Improved the keyboard focus visibility for links inside dialogs
 // TINY-10124
-Previously, when a link was rendered within a {productname} dialog, it was difficult for a user to identify the visual difference between `normal, hovered` or `focused` when rendered inside the body content of a dialog such as the help dialog.
+Previously, when a link was rendered inside the body content of a {productname} dialog, such as the **Help** dialog, it was difficult for a user to identify the visual difference between the *normal*, *hovered* or *focused* states.
 
-As a consequence, when the user hovered or focused on the link using keyboard navigation, the distinction between the state modes was almost unnoticeable to the user.
+As well, when a link’s state was changed via keyboard navigation, making a distinction between the states was difficult.
 
-{productname} 6.7 addresses this issues by, adding a underline to all links;
-* improving the default color contrast;
-* and adding an outline to the link when using the keyboard.
+{productname} 6.7 addresses this by
+. adding an underline to all links to increase the contrast between links and non-links by default; and 
+. adding an outline around the link when the link is given focus using keyboard navigation.
 
-As a result, when the state of a links changes, the user will now, immediately be able to identify when the element within the dialog has keyboard focus.
+When using {productname} 6.7, users now get greater visual distinction between link and non-links, and immediate feedback as to a link’s change of state when using keyboard navigation.
 
 
 [[additions]]
